# summon-dnas

./: README.md
cart/workdir/: cart.dna  dna.yaml
cart/zomes/coordinator/cart/: Cargo.toml
cart/zomes/coordinator/cart/src/: address.rs  cart.rs  lib.rs
cart/zomes/coordinator/profiles/: Cargo.toml
cart/zomes/coordinator/profiles/src/: lib.rs
cart/zomes/integrity/cart/: Cargo.toml
cart/zomes/integrity/cart/src/: address.rs  cart.rs  lib.rs
cart/zomes/integrity/profiles/: Cargo.toml
cart/zomes/integrity/profiles/src/: lib.rs
preferences/workdir/: dna.yaml  preferences.dna
preferences/zomes/coordinator/preferences/: Cargo.toml
preferences/zomes/coordinator/preferences/src/: lib.rs  preferences.rs
preferences/zomes/integrity/preferences_integrity/: Cargo.toml
preferences/zomes/integrity/preferences_integrity/src/: lib.rs
products-directory/workdir/: dna.yaml  products_directory.dna
products-directory/zomes/coordinator/products_directory/: Cargo.toml
products-directory/zomes/coordinator/products_directory/src/: lib.rs
products-directory/zomes/integrity/products_directory_integrity/: Cargo.toml
products-directory/zomes/integrity/products_directory_integrity/src/: lib.rs
products/workdir/: dna.yaml  products.dna
products/zomes/coordinator/product_catalog/: Cargo.toml
products/zomes/integrity/product_catalog/: Cargo.toml
profiles/workdir/: dna.yaml  profiles.dna
profiles/zomes/coordinator/address/: Cargo.toml
profiles/zomes/coordinator/profiles/: Cargo.toml
profiles/zomes/integrity/address/: Cargo.toml
(+12 files in other folders)
