[package]
name = "preferences"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "preferences"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
preferences_integrity = { path = "../../integrity/preferences_integrity" }