[package]
name = "products_directory"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "products_directory"

[dependencies]
hdk = { workspace = true, features = ["properties"] }
serde = { workspace = true }
holochain_serialized_bytes = { workspace = true }
products_directory_integrity = { path = "../../integrity/products_directory_integrity" }